{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 142,
  "lineage": "e7501d77-0a8d-afd3-856d-626b0d1a6765",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kube-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443",
                  "443",
                  "80",
                  "8080",
                  "8088"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-02-10T19:42:22.620-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/savvy-temple-283812/global/firewalls/kube-firewall",
            "log_config": [],
            "name": "kube-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster",
            "priority": 1000,
            "project": "savvy-temple-283812",
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/firewalls/kube-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "kube-cluster"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kube-firewall-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "ipip"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-02-10T22:37:38.657-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/savvy-temple-283812/global/firewalls/kube-firewall-internal",
            "log_config": [],
            "name": "kube-firewall-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster",
            "priority": 1000,
            "project": "savvy-temple-283812",
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/firewalls/kube-firewall-internal",
            "source_ranges": [
              "10.244.0.0/16",
              "10.96.0.0/12"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "kube-cluster"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "kube-cluster"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kube-firewall-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-02-11T06:44:26.029-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/savvy-temple-283812/global/firewalls/kube-firewall-lb",
            "log_config": [],
            "name": "kube-firewall-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster",
            "priority": 1000,
            "project": "savvy-temple-283812",
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/firewalls/kube-firewall-lb",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "kube-lb"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kube-tools",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-02-11T23:53:53.724-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/savvy-temple-283812/global/firewalls/kube-tools",
            "log_config": [],
            "name": "kube-tools",
            "network": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster",
            "priority": 1000,
            "project": "savvy-temple-283812",
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/firewalls/kube-tools",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "kube-tools"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/savvy-temple-283812/global/networks/kube-cluster",
            "mtu": 0,
            "name": "kube-cluster",
            "project": "savvy-temple-283812",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster"
          }
        }
      ]
    },
    {
      "module": "module.kube-lb.module.kube-lb",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210122",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast1-a/disks/kube-lb"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/savvy-temple-283812/zones/asia-northeast1-a/instances/kube-lb",
            "instance_id": "4915609418001349669",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/AAYGxAPZ+1SqLkRRtcLchSs4Oil9ameFEUIk/DPAmsa/ kmdr7@ssl-u12-l41f\n"
            },
            "metadata_fingerprint": "2l7XDKZgPRs=",
            "metadata_startup_script": "adduser -m linux1-user\nmkdir -p /home/linux1-user/.ssh\ncat \u003c\u003cEOF \u003e /home/linux1-user/.ssh/authorized_keys\nssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/ [...]
            "name": "kube-lb",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.221.84.16",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster",
                "network_ip": "10.146.0.6",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/regions/asia-northeast1/subnetworks/kube-cluster",
                "subnetwork_project": "savvy-temple-283812"
              }
            ],
            "project": "savvy-temple-283812",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast1-a/instances/kube-lb",
            "service_account": [
              {
                "email": "271985057587-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kube-cluster"
            ],
            "tags_fingerprint": "qdHGSE7qFFo=",
            "zone": "asia-northeast1-a"
          },
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.kube-master-1.module.kube-master-1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210122",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast1-a/disks/kube-master-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/savvy-temple-283812/zones/asia-northeast1-a/instances/kube-master-1",
            "instance_id": "8721448344931038166",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/AAYGxAPZ+1SqLkRRtcLchSs4Oil9ameFEUIk/DPAmsa/ kmdr7@ssl-u12-l41f\n"
            },
            "metadata_fingerprint": "2l7XDKZgPRs=",
            "metadata_startup_script": "adduser -m linux1-user\nmkdir -p /home/linux1-user/.ssh\ncat \u003c\u003cEOF \u003e /home/linux1-user/.ssh/authorized_keys\nssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/ [...]
            "name": "kube-master-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.84.99.128",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster",
                "network_ip": "10.146.0.8",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/regions/asia-northeast1/subnetworks/kube-cluster",
                "subnetwork_project": "savvy-temple-283812"
              }
            ],
            "project": "savvy-temple-283812",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast1-a/instances/kube-master-1",
            "service_account": [
              {
                "email": "271985057587-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kube-cluster"
            ],
            "tags_fingerprint": "qdHGSE7qFFo=",
            "zone": "asia-northeast1-a"
          },
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.kube-master-2.module.kube-master-2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210122",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast1-a/disks/kube-master-2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/savvy-temple-283812/zones/asia-northeast1-a/instances/kube-master-2",
            "instance_id": "8765837093928203222",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/AAYGxAPZ+1SqLkRRtcLchSs4Oil9ameFEUIk/DPAmsa/ kmdr7@ssl-u12-l41f\n"
            },
            "metadata_fingerprint": "2l7XDKZgPRs=",
            "metadata_startup_script": "adduser -m linux1-user\nmkdir -p /home/linux1-user/.ssh\ncat \u003c\u003cEOF \u003e /home/linux1-user/.ssh/authorized_keys\nssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/ [...]
            "name": "kube-master-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.189.148.206",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster",
                "network_ip": "10.146.0.9",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/regions/asia-northeast1/subnetworks/kube-cluster",
                "subnetwork_project": "savvy-temple-283812"
              }
            ],
            "project": "savvy-temple-283812",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast1-a/instances/kube-master-2",
            "service_account": [
              {
                "email": "271985057587-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kube-cluster"
            ],
            "tags_fingerprint": "qdHGSE7qFFo=",
            "zone": "asia-northeast1-a"
          },
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.kube-master-3.module.kube-master-3",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210122",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast1-a/disks/kube-master-3"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/savvy-temple-283812/zones/asia-northeast1-a/instances/kube-master-3",
            "instance_id": "5363486743612388310",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/AAYGxAPZ+1SqLkRRtcLchSs4Oil9ameFEUIk/DPAmsa/ kmdr7@ssl-u12-l41f\n"
            },
            "metadata_fingerprint": "2l7XDKZgPRs=",
            "metadata_startup_script": "adduser -m linux1-user\nmkdir -p /home/linux1-user/.ssh\ncat \u003c\u003cEOF \u003e /home/linux1-user/.ssh/authorized_keys\nssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/ [...]
            "name": "kube-master-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.84.54.137",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster",
                "network_ip": "10.146.0.7",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/regions/asia-northeast1/subnetworks/kube-cluster",
                "subnetwork_project": "savvy-temple-283812"
              }
            ],
            "project": "savvy-temple-283812",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast1-a/instances/kube-master-3",
            "service_account": [
              {
                "email": "271985057587-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kube-cluster"
            ],
            "tags_fingerprint": "qdHGSE7qFFo=",
            "zone": "asia-northeast1-a"
          },
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.kube-tools-1.module.kube-tools-1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210122",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast2-a/disks/kube-tools-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/savvy-temple-283812/zones/asia-northeast2-a/instances/kube-tools-1",
            "instance_id": "549660073673866280",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/AAYGxAPZ+1SqLkRRtcLchSs4Oil9ameFEUIk/DPAmsa/ kmdr7@ssl-u12-l41f\n"
            },
            "metadata_fingerprint": "2l7XDKZgPRs=",
            "metadata_startup_script": "adduser -m linux1-user\nmkdir -p /home/linux1-user/.ssh\ncat \u003c\u003cEOF \u003e /home/linux1-user/.ssh/authorized_keys\nssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/ [...]
            "name": "kube-tools-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.97.149.48",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster",
                "network_ip": "10.174.0.12",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/regions/asia-northeast2/subnetworks/kube-cluster",
                "subnetwork_project": "savvy-temple-283812"
              }
            ],
            "project": "savvy-temple-283812",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast2-a/instances/kube-tools-1",
            "service_account": [
              {
                "email": "271985057587-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kube-cluster"
            ],
            "tags_fingerprint": "qdHGSE7qFFo=",
            "zone": "asia-northeast2-a"
          },
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.kube-worker-1.module.kube-worker-1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210122",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast2-a/disks/kube-worker-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/savvy-temple-283812/zones/asia-northeast2-a/instances/kube-worker-1",
            "instance_id": "6070348127566219923",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/AAYGxAPZ+1SqLkRRtcLchSs4Oil9ameFEUIk/DPAmsa/ kmdr7@ssl-u12-l41f\n"
            },
            "metadata_fingerprint": "2l7XDKZgPRs=",
            "metadata_startup_script": "adduser -m linux1-user\nmkdir -p /home/linux1-user/.ssh\ncat \u003c\u003cEOF \u003e /home/linux1-user/.ssh/authorized_keys\nssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/ [...]
            "name": "kube-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.97.205.178",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster",
                "network_ip": "10.174.0.13",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/regions/asia-northeast2/subnetworks/kube-cluster",
                "subnetwork_project": "savvy-temple-283812"
              }
            ],
            "project": "savvy-temple-283812",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast2-a/instances/kube-worker-1",
            "service_account": [
              {
                "email": "271985057587-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kube-cluster"
            ],
            "tags_fingerprint": "qdHGSE7qFFo=",
            "zone": "asia-northeast2-a"
          },
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.kube-worker-2.module.kube-worker-2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210122",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast2-b/disks/kube-worker-2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/savvy-temple-283812/zones/asia-northeast2-b/instances/kube-worker-2",
            "instance_id": "7430699278211238800",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/AAYGxAPZ+1SqLkRRtcLchSs4Oil9ameFEUIk/DPAmsa/ kmdr7@ssl-u12-l41f\n"
            },
            "metadata_fingerprint": "2l7XDKZgPRs=",
            "metadata_startup_script": "adduser -m linux1-user\nmkdir -p /home/linux1-user/.ssh\ncat \u003c\u003cEOF \u003e /home/linux1-user/.ssh/authorized_keys\nssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDNLm7NtPHyje8DsKeRbm06VUr44F/CDgdxHQiXW8pj/c0u5NR7X/py7bqtsPw/aK+ID1eKr99ucSvHwIeVfiz7uAtw9IPSu5+qDvuSUPDejxX8B/FBayi1M7W5akYbAk5XaczlXEx1cYwIOYFafNRXEVKgwnWqPEvlQHgpBMFmQwjHw4knepLuqgBbo+dCUxm10WBOZ2b8iWEB19g2bDn+IYSrZU+x/OGZmxxADhIFXMTGm31CYt+8+CWs3F1NDr4/aeVwIczmYJ9xKXeGmbL3LwjVAo8OA0D28QkqLaC/ [...]
            "name": "kube-worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.97.26.144",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/global/networks/kube-cluster",
                "network_ip": "10.174.0.11",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/regions/asia-northeast2/subnetworks/kube-cluster",
                "subnetwork_project": "savvy-temple-283812"
              }
            ],
            "project": "savvy-temple-283812",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/savvy-temple-283812/zones/asia-northeast2-b/instances/kube-worker-2",
            "service_account": [
              {
                "email": "271985057587-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kube-cluster"
            ],
            "tags_fingerprint": "qdHGSE7qFFo=",
            "zone": "asia-northeast2-b"
          },
          "dependencies": [
            "google_compute_network.kubernetes"
          ]
        }
      ]
    }
  ]
}